--- a/docker-config.yaml
+++ b/docker-config.yaml
@@ -6,7 +6,7 @@ http:
       entryPoints:
         - web
       middlewares:
-        - static-response
+        - swagger-merge-docs
 
   services:
     test-service:
@@ -15,9 +15,9 @@ http:
           - url: http://127.0.0.1:8080
   
   middlewares:
-    static-response:
+    swagger-merge-docs:
       plugin:
-        static-response:
+        swagger-merge-docs:
           paths:
           - path: /
             content: |
